## automake.am
##
## icons/automake.am for Rivendell
##
## (C) Copyright 2002-2006,2016-2017 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

install-exec-am:	
	mkdir -p $(DESTDIR)@libexecdir@
	cp donut-spinner.gif $(DESTDIR)@libexecdir@
	cp greencheckmark.png $(DESTDIR)@libexecdir@
	cp redx.png $(DESTDIR)@libexecdir@
	cp blueball.png $(DESTDIR)@libexecdir@
	cp greenball.png $(DESTDIR)@libexecdir@
	cp redball.png $(DESTDIR)@libexecdir@
	cp whiteball.png $(DESTDIR)@libexecdir@
	cp progressbar.gif $(DESTDIR)@libexecdir@
	mkdir -p $(DESTDIR)@libexecdir@/logos
	cp webget_logo.png $(DESTDIR)@libexecdir@/logos/
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps
	cp rivendell-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rivendell-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rivendell-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rivendell-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rivendell-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rivendell-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rivendell-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rivendell.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rivendell-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rivendell.png
	cp rdadmin-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdadmin-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdadmin-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdadmin-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdadmin-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdadmin-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdadmin-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdadmin.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdadmin-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdadmin.png
	cp rdairplay-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdairplay-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdairplay-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdairplay-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdairplay-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdairplay-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdairplay-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdairplay.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdairplay-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdairplay.png
	cp rdcartslots-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdcartslots-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdcartslots-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdcartslots-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcartslots-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdcartslots-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdcartslots-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcartslots.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcartslots-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcartslots.png
	cp rdcastmanager-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdcastmanager-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdcastmanager-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdcastmanager-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcastmanager-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdcastmanager-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdcastmanager-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcastmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcastmanager-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcastmanager.png
	cp rdcatch-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdcatch-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdcatch-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdcatch-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcatch-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdcatch-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdcatch-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcatch.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdcatch-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcatch.png
	cp rdlibrary-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdlibrary-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdlibrary-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdlibrary-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlibrary-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdlibrary-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdlibrary-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlibrary.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlibrary-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlibrary.png
	cp rdlogedit-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdlogedit-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdlogedit-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdlogedit-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlogedit-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdlogedit-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdlogedit-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlogedit.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlogedit-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogedit.png
	cp rdlogmanager-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdlogmanager-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdlogmanager-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdlogmanager-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlogmanager-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdlogmanager-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdlogmanager-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlogmanager.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdlogmanager-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogmanager.png
	cp rdpanel-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
	cp rdpanel-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
	cp rdpanel-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps
	cp rdpanel-64x64.png $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdpanel-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps
	cp rdpanel-256x256.png $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps
	cp rdpanel-512x512.png $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps
	cp rdpanel-128x128.png $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdpanel.png
	mkdir -p $(DESTDIR)@prefix@/share/X11/fvwm2/pixmaps
	cp rivendell-16x16.xpm $(DESTDIR)@prefix@/share/X11/fvwm2/pixmaps/mini.rivendell.xpm
	cp rivendell-32x32.xpm $(DESTDIR)@prefix@/share/X11/fvwm2/pixmaps/rivendell.xpm

uninstall-local:	
	rm -f $(DESTDIR)@libexecdir@/donut-spinner.gif
	rm -f $(DESTDIR)@libexecdir@/greencheckmark.png
	rm -f $(DESTDIR)@libexecdir@/redx.png
	rm -f $(DESTDIR)@libexecdir@/blueball.png
	rm -f $(DESTDIR)@libexecdir@/greenball.png
	rm -f $(DESTDIR)@libexecdir@/redball.png
	rm -f $(DESTDIR)@libexecdir@/whiteball.png
	rm -f $(DESTDIR)@libexecdir@/progressbar.gif
	rm -f $(DESTDIR)@libexecdir@/logos/webget_logo.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rivendell-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rivendell.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdadmin-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdadmin.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdairplay-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdairplay.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcartslots-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcartslots.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcastmanager-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcastmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdcatch-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdcatch.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlibrary-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlibrary.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogedit-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlogedit.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdlogmanager-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdlogmanager.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/rdpanel.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/rdpanel.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/rdpanel.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/64x64/apps/rdpanel.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/128x128/apps/rdpanel-128x128.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/256x256/apps/rdpanel.png
	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/512x512/apps/rdpanel.png


EXTRA_DIST = admin.xpm\
             blueball.png\
             blueball.xpm\
             chain.png\
             chain.xpm\
             checkmark.xpm\
             cover_art_default-60x60.xcf\
             cover_art_default-60x60.xpm\
             donut-spinner.gif\
             donut-spinner.xcf\
             download.xpm\
             ex.xpm\
             fillstart.xpm\
             fillstop.xpm\
             greenball.png\
             greencheckmark.png\
             greenball.xpm\
             greencheckmark.xpm\
             localuser.xpm\
             marker.xpm\
             mic16.png\
             mic16.xpm\
             music.png\
             music.xpm\
             musicbrainz-159x25.xpm\
             musicbrainz.svg\
             note.xpm\
             note2.xpm\
             notemarker.png\
             notemarker.xpm\
             play.png\
             play.xpm\
             macro.xpm\
             post.xpm\
             post2.xpm\
             post3.xpm\
             progressbar.gif\
             progressbar.xcf\
             record.xpm\
             record2.xpm\
             record3.xpm\
             redball.png\
             redball.xpm\
             redcheckmark.xpm\
             redx.png\
             redx.xpm\
             rdadmin.ico\
             rdadmin-128x128.png\
             rdadmin-256x256.png\
             rdadmin-64x64.png\
             rdadmin-16x16.png\
             rdadmin-32x32.png\
             rdadmin-22x22.png\
             rdadmin-512x512.png\
             rdadmin-128x128.xpm\
             rdadmin-256x256.xpm\
             rdadmin-64x64.xpm\
             rdadmin-16x16.xpm\
             rdadmin-32x32.xpm\
             rdadmin-22x22.xpm\
             rdadmin-512x512.xpm\
             rdairplay-128x128.png\
             rdairplay-256x256.png\
             rdairplay-64x64.png\
             rdairplay-16x16.png\
             rdairplay-32x32.png\
             rdairplay-22x22.png\
             rdairplay-512x512.png\
             rdairplay-128x128.xpm\
             rdairplay-256x256.xpm\
             rdairplay-64x64.xpm\
             rdairplay-16x16.xpm\
             rdairplay-32x32.xpm\
             rdairplay-22x22.xpm\
             rdairplay-512x512.xpm\
             rdairplay.ico\
             rdcartslots-128x128.xpm\
             rdcartslots-16x16.xpm\
             rdcartslots-22x22.xpm\
             rdcartslots-256x256.xpm\
             rdcartslots-32x32.xpm\
             rdcartslots-512x512.xpm\
             rdcartslots-64x64.xpm\
             rdcartslots-128x128.png\
             rdcartslots-16x16.png\
             rdcartslots-22x22.png\
             rdcartslots-256x256.png\
             rdcartslots-32x32.png\
             rdcartslots-512x512.png\
             rdcartslots-64x64.png\
             rdcartslots.ico\
             rdcastmanager-128x128.png\
             rdcastmanager-16x16.png\
             rdcastmanager-22x22.png\
             rdcastmanager-256x256.png\
             rdcastmanager-32x32.png\
             rdcastmanager-512x512.png\
             rdcastmanager-64x64.png\
             rdcastmanager-128x128.xpm\
             rdcastmanager-16x16.xpm\
             rdcastmanager-22x22.xpm\
             rdcastmanager-256x256.xpm\
             rdcastmanager-32x32.xpm\
             rdcastmanager-512x512.xpm\
             rdcastmanager-64x64.xpm\
             rdcastmanager.ico\
             rdcatch-128x128.png\
             rdcatch-16x16.png\
             rdcatch-22x22.png\
             rdcatch-256x256.png\
             rdcatch-32x32.png\
             rdcatch-512x512.png\
             rdcatch-64x64.png\
             rdcatch-128x128.xpm\
             rdcatch-16x16.xpm\
             rdcatch-22x22.xpm\
             rdcatch-256x256.xpm\
             rdcatch-32x32.xpm\
             rdcatch-512x512.xpm\
             rdcatch-64x64.xpm\
             rdcatch.ico\
             rdlibrary-128x128.png\
             rdlibrary-16x16.png\
             rdlibrary-22x22.png\
             rdlibrary-256x256.png\
             rdlibrary-32x32.png\
             rdlibrary-512x512.png\
             rdlibrary-64x64.png\
             rdlibrary-128x128.xpm\
             rdlibrary-16x16.xpm\
             rdlibrary-22x22.xpm\
             rdlibrary-256x256.xpm\
             rdlibrary-32x32.xpm\
             rdlibrary-512x512.xpm\
             rdlibrary-64x64.xpm\
             rdlibrary.ico\
             rdlogedit-128x128.png\
             rdlogedit-16x16.png\
             rdlogedit-22x22.png\
             rdlogedit-256x256.png\
             rdlogedit-32x32.png\
             rdlogedit-512x512.png\
             rdlogedit-64x64.png\
             rdlogedit-128x128.xpm\
             rdlogedit-16x16.xpm\
             rdlogedit-22x22.xpm\
             rdlogedit-256x256.xpm\
             rdlogedit-32x32.xpm\
             rdlogedit-512x512.xpm\
             rdlogedit-64x64.xpm\
             rdlogedit.ico\
             rdlogmanager-128x128.png\
             rdlogmanager-16x16.png\
             rdlogmanager-22x22.png\
             rdlogmanager-256x256.png\
             rdlogmanager-32x32.png\
             rdlogmanager-512x512.png\
             rdlogmanager-64x64.png\
             rdlogmanager-128x128.xpm\
             rdlogmanager-16x16.xpm\
             rdlogmanager-22x22.xpm\
             rdlogmanager-256x256.xpm\
             rdlogmanager-32x32.xpm\
             rdlogmanager-512x512.xpm\
             rdlogmanager-64x64.xpm\
             rdlogmanager.ico\
             rdpanel-128x128.png\
             rdpanel-16x16.png\
             rdpanel-22x22.png\
             rdpanel-256x256.png\
             rdpanel-32x32.png\
             rdpanel-512x512.png\
             rdpanel-64x64.png\
             rdpanel-128x128.xpm\
             rdpanel-16x16.xpm\
             rdpanel-22x22.xpm\
             rdpanel-256x256.xpm\
             rdpanel-32x32.xpm\
             rdpanel-512x512.xpm\
             rdpanel-64x64.xpm\
             rdpanel.ico\
             rivendell-128x128.png\
             rivendell-16x16.png\
             rivendell-22x22.png\
             rivendell-256x256.png\
             rivendell-32x32.png\
             rivendell-512x512.png\
             rivendell-64x64.png\
             rivendell-128x128.xpm\
             rivendell-16x16.xpm\
             rivendell-22x22.xpm\
             rivendell-256x256.xpm\
             rivendell-32x32.xpm\
             rivendell-512x512.xpm\
             rivendell-64x64.xpm\
             rivendell.ico\
             rivendell.res\
             rml.xpm\
             rml2.xpm\
             rml3.xpm\
             rml5.png\
             rml5.xpm\
             rss.png\
             rss.xcf\
             rss.xpm\
             split.xpm\
             switch.xpm\
             switch2.xpm\
             switch3.xpm\
             track.xpm\
             track_cart.png\
             track_cart.xpm\
             traffic.png\
             traffic.xpm\
             trashcan-16x16.xpm\
             trashcan-32x32.png\
             trashcan-32x32.xpm\
             upload.xpm\
             user.xpm\
             webget_logo.png\
             whiteball.png\
             whiteball.xpm

CLEANFILES = *~

MAINTAINERCLEANFILES = *~\
                       aclocal.m4\
                       configure\
                       Makefile.in
